Migrate tests to JUnit5 (#82)
* Migrate annotations and imports
* Migrate assertions
* Remove public visibility for test classes and methods
* Minor clean up

Co-authored-by: strangelookingnerd <strangelookingnerd@users.noreply.github.com>